--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- 主観評価結果（中央揃え） -->
     <section class="figure-section">
       <figure class="spectrogram-figure">
-        <img src="./img/mos.png" alt="主観評価結果の図" />
+        <img src="./img/mos_en.png" alt="Results of MOS test on perceptual sound quality for singing voices." />
         <figcaption>Results of MOS test on perceptual sound quality for reconstructed singing voices and singing voices with F0 conversion to F0×0.5 and F0×2.0. 22 Japanese speakers participated, and 12 samples were evaluated for each method and each F0 conversion condition.</figcaption>
       </figure>
     </section>
@@ -42,7 +42,7 @@
     <!-- スペクトログラム画像（中央揃え） -->
     <section class="figure-section">
       <figure class="spectrogram-figure">
-        <img src="./img/spectrogram.png" alt="スペクトログラム例" />
+        <img src="./img/spectrogram.png" alt="Spectrograms of the F0-converted singing voices by each model." />
         <figcaption>Spectrograms of the F0-converted singing voices by each model. (BC-seg20)</figcaption>
       </figure>
     </section>
