--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <section class="references left-align">
       <h2 class="section-heading">References</h2>
       <p>[1] Canon, [NamineRitsu] Blue (YOASOBI) [ENUNU model Ver.2, Singing DBVer.2 release], https://www.youtube.com/watch?v=pKeo9IE_L1I, Accessed: 2024.1.30.</p>
-      <p>[2] R. Yoneyama, Y.-C. Wu, and T. Toda, “Source-Filter HiFiGAN: Fast and Pitch Controllable High-Fidelity Neural Vocoder,” in Proc. ICASSP, 2023, pp. 1–5.</p>
+      <p>[2] R. Yoneyama, Y.-C. Wu, and T. Toda, “Source-Filter HiFi-GAN: Fast and Pitch Controllable High-Fidelity Neural Vocoder,” in Proc. ICASSP, 2023, pp. 1–5.</p>
     </section>
 
   </main>
